RESOLVED FIXED136260
REGRESSION (r172771): Amazon product page becomes unresponsive after swiping back to it
https://bugs.webkit.org/show_bug.cgi?id=136260
Summary REGRESSION (r172771): Amazon product page becomes unresponsive after swiping ...
Tim Horton
Reported 2014-08-26 11:03:36 PDT
The snapshot gets stuck if swiping back causes a same document navigation. <rdar://problem/18107826>
Attachments
patch (15.68 KB, patch)
2014-08-26 11:18 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2014-08-26 11:18:23 PDT
WebKit Commit Bot
Comment 2 2014-08-26 11:19:30 PDT
Attachment 237159 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ViewGestureController.h:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2014-08-26 11:27:47 PDT
Comment on attachment 237159 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=237159&action=review > Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm:696 > +void PageClientImpl::didSameDocumentNavigationForMainFrame(SameDocumentNavigationType) > +{ > +} > + Why doesn’t this require an iOS implementation? > Source/WebKit2/UIProcess/mac/ViewGestureController.h:31 > #include "WeakObjCPtr.h" > +#include "SameDocumentNavigationType.h" S < W
Tim Horton
Comment 4 2014-08-26 11:33:47 PDT
Comment on attachment 237159 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=237159&action=review >> Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm:696 >> + > > Why doesn’t this require an iOS implementation? iOS's ViewGestureController is a wildly different implementation that takes advantage of UI-side compositing and the transaction system to do this all in a different way. We should converge them eventually, but not today.
Tim Horton
Comment 5 2014-08-26 11:42:28 PDT
Tim Horton
Comment 7 2014-08-26 12:06:32 PDT
(In reply to comment #6) > (In reply to comment #5) > > http://trac.webkit.org/changeset/172966 > > This broke both the GTK and EFL builds: http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Build%29/builds/50434/steps/compile-webkit/logs/stdio/text You guys probably need empty an PageClient override for didSameDocumentNavigationForMainFrame
Carlos Alberto Lopez Perez
Comment 8 2014-08-26 13:03:03 PDT
(In reply to comment #7) > (In reply to comment #6) > > (In reply to comment #5) > > > http://trac.webkit.org/changeset/172966 > > > > This broke both the GTK and EFL builds: http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Build%29/builds/50434/steps/compile-webkit/logs/stdio/text > > You guys probably need empty an PageClient override for didSameDocumentNavigationForMainFrame Fixed the GTK build on http://trac.webkit.org/changeset/172971
Csaba Osztrogonác
Comment 9 2014-08-26 13:13:45 PDT
Note You need to log in before you can comment on or make changes to this bug.