Source/WebKit2/UIProcess/API/mac/WKViewInternal.h
@@ -26,6 +26,7 @@
 #import "WKViewPrivate.h"
 
 #import "PluginComplexTextInputState.h"
+#import "SameDocumentNavigationType.h"
 #import "WebFindOptions.h"
 #import <wtf/Forward.h>
 #import <wtf/RetainPtr.h>
@@ -109,6 +110,7 @@ struct WebPageConfiguration;
 
 - (void)_didFirstVisuallyNonEmptyLayoutForMainFrame;
 - (void)_didFinishLoadForMainFrame;
+- (void)_didSameDocumentNavigationForMainFrame:(WebKit::SameDocumentNavigationType)type;
 - (void)_removeNavigationGestureSnapshot;
 
 #if WK_API_ENABLED
