Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm
@@ -690,6 +690,10 @@ void PageClientImpl::didFinishLoadForMainFrame()
 {
 }
 
+void PageClientImpl::didSameDocumentNavigationForMainFrame(SameDocumentNavigationType)
+{
+}
+
 } // namespace WebKit
 
 #endif // PLATFORM(IOS)
