Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm
@@ -77,7 +77,8 @@ static const CGFloat minimumHorizontalSwipeDistance = 15;
 static const float minimumScrollEventRatioForSwipe = 0.5;
 
 static const float swipeSnapshotRemovalRenderTreeSizeTargetFraction = 0.5;
-static const std::chrono::seconds swipeSnapshotRemovalWatchdogDuration = 3_s;
+static const std::chrono::seconds swipeSnapshotRemovalWatchdogDuration = 5_s;
+static const std::chrono::seconds swipeSnapshotRemovalWatchdogAfterFirstVisuallyNonEmptyLayoutDuration = 3_s;
 
 @interface WKSwipeCancellationTracker : NSObject {
 @private
@@ -98,6 +99,7 @@ ViewGestureController::ViewGestureController(WebPageProxy& webPageProxy)
     : m_webPageProxy(webPageProxy)
     , m_activeGestureType(ViewGestureType::None)
     , m_swipeWatchdogTimer(RunLoop::main(), this, &ViewGestureController::swipeSnapshotWatchdogTimerFired)
+    , m_swipeWatchdogAfterFirstVisuallyNonEmptyLayoutTimer(RunLoop::main(), this, &ViewGestureController::swipeSnapshotWatchdogTimerFired)
     , m_lastMagnificationGestureWasSmartMagnification(false)
     , m_visibleContentRectIsValid(false)
     , m_frameHandlesMagnificationGesture(false)
@@ -108,6 +110,7 @@ ViewGestureController::ViewGestureController(WebPageProxy& webPageProxy)
     , m_swipeWaitingForVisuallyNonEmptyLayout(false)
     , m_swipeWaitingForRenderTreeSizeThreshold(false)
     , m_swipeWaitingForRepaint(false)
+    , m_swipeInProgress(false)
 {
     m_webPageProxy.process().addMessageReceiver(Messages::ViewGestureController::messageReceiverName(), m_webPageProxy.pageID(), *this);
 }
@@ -505,6 +508,7 @@ void ViewGestureController::beginSwipeGesture(WebBackForwardListItem* targetItem
     m_webPageProxy.navigationGestureDidBegin();
 
     m_activeGestureType = ViewGestureType::Swipe;
+    m_swipeInProgress = true;
 
     CALayer *rootContentLayer = m_webPageProxy.acceleratedCompositingRootLayer();
 
@@ -627,6 +631,8 @@ void ViewGestureController::endSwipeGesture(WebBackForwardListItem* targetItem, 
 
     m_swipeCancellationTracker = nullptr;
 
+    m_swipeInProgress = false;
+
     CALayer *rootLayer = m_webPageProxy.acceleratedCompositingRootLayer();
 
     [rootLayer setShadowOpacity:0];
@@ -649,11 +655,13 @@ void ViewGestureController::endSwipeGesture(WebBackForwardListItem* targetItem, 
 
     m_webPageProxy.navigationGestureDidEnd(true, *targetItem);
     m_webPageProxy.goToBackForwardItem(targetItem);
+
+    m_swipeWatchdogTimer.startOneShot(swipeSnapshotRemovalWatchdogDuration.count());
 }
 
 void ViewGestureController::didHitRenderTreeSizeThreshold()
 {
-    if (m_activeGestureType != ViewGestureType::Swipe)
+    if (m_activeGestureType != ViewGestureType::Swipe || m_swipeInProgress)
         return;
 
     m_swipeWaitingForRenderTreeSizeThreshold = false;
@@ -664,20 +672,27 @@ void ViewGestureController::didHitRenderTreeSizeThreshold()
 
 void ViewGestureController::didFirstVisuallyNonEmptyLayoutForMainFrame()
 {
-    if (m_activeGestureType != ViewGestureType::Swipe)
+    if (m_activeGestureType != ViewGestureType::Swipe || m_swipeInProgress)
         return;
 
     m_swipeWaitingForVisuallyNonEmptyLayout = false;
 
     if (!m_swipeWaitingForRenderTreeSizeThreshold)
         removeSwipeSnapshotAfterRepaint();
-    else
-        m_swipeWatchdogTimer.startOneShot(swipeSnapshotRemovalWatchdogDuration.count());
+    else {
+        m_swipeWatchdogAfterFirstVisuallyNonEmptyLayoutTimer.startOneShot(swipeSnapshotRemovalWatchdogAfterFirstVisuallyNonEmptyLayoutDuration.count());
+        m_swipeWatchdogTimer.stop();
+    }
 }
 
 void ViewGestureController::didFinishLoadForMainFrame()
 {
-    if (m_activeGestureType != ViewGestureType::Swipe)
+    removeSwipeSnapshotAfterRepaint();
+}
+
+void ViewGestureController::didSameDocumentNavigationForMainFrame(SameDocumentNavigationType type)
+{
+    if (type != SameDocumentNavigationSessionStateReplace && type != SameDocumentNavigationSessionStatePop)
         return;
 
     removeSwipeSnapshotAfterRepaint();
@@ -690,7 +705,7 @@ void ViewGestureController::swipeSnapshotWatchdogTimerFired()
 
 void ViewGestureController::removeSwipeSnapshotAfterRepaint()
 {
-    if (m_activeGestureType != ViewGestureType::Swipe)
+    if (m_activeGestureType != ViewGestureType::Swipe || m_swipeInProgress)
         return;
 
     if (m_swipeWaitingForRepaint)
@@ -709,6 +724,7 @@ void ViewGestureController::removeSwipeSnapshot()
     m_swipeWaitingForRepaint = false;
 
     m_swipeWatchdogTimer.stop();
+    m_swipeWatchdogAfterFirstVisuallyNonEmptyLayoutTimer.stop();
 
     if (m_activeGestureType != ViewGestureType::Swipe)
         return;
